# gasp-e2e

./: .editorconfig2  .eslintignore  .eslintrc.cjs  .eslintrc.js  .gitignore  .gitmodules  5EtH6d9UCj2F9sAzd22fSKxaP3GqyBPF6kLd9Xa1HE47icKT.json  5FZQjJNgrcS7BAjVVoikRmPSSjMQrjVkAWB8zXKtEZYvXvdD.json  5GLRnGWVJEBYKx37jcgjSgsqka2c3sHABjbT6TT1yChXWUA3.json  5GrwvaEF5zXb26Fz9rcQpDWS57CtERHpNehXCPcNoHGKutQY.json  5HQ9Mm9L1HG53htEGDMsnhkkL7hEfF9vLstEQPtMLX5Gupqx.json  5HVn4w911XSWSC8xZoiUo1mHSbiFkdXwN42eWBmzrQcvLMZg.json  5HpHvaSezuQnrnjmyb6vPzUdDNV2p317342mjkQX8MNs21rk.json  Readme.md  babel.config.cjs  commitlint.config.cjs  commitlint.config.js  environment.properties  eslint.config.mjs  index.html  index.test.ts  index.ts  jest.config.js  package-lock.json  package.json  prettierrc.js  rococo-v0.29.0.wasm  sdk.js  shell.nix  tsconfig.json  vitest.config.ts
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.husky/: commit-msg  pre-commit
cliTool/: Readme.md  differ.ts  index.ts  package-lock.json  package.json
dev-test-encrypted-transactions/: index.js  package.json
docs/: readme.md
fe-ai-tests/: .env.example  README.md  collator_details_prod_test.py  pyproject.toml  pytest.ini  requirements.txt  wallets_prod_test.py
fe-ai-tests/tests/: debug_script.py  test_prod_swap.py  test_prod_wallets.py
fe-ai-tests/utils/: __init__.py  common_test_utils.py  swap_actions.py  wallet_actions.py
last-history/: categories-trend.json  duration-trend.json  history-trend.json  history.json  retry-trend.json
mitmproxy/: modify_response.py  (+1 more)
testPad/: SendTxs.ts  (+30 more)
(+56186 files in other folders)
